Fixed flex column centering for the cards on mobile breakpoint

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -70,6 +70,7 @@ article {
     .cards {
         display: flex;
         flex-direction: column;
+        align-items: center;
         margin-top: 55px;
     }
 
